--- a/WebApp/opted-adv-search/src/app/z_components/layout/layout.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/layout.component.html
@@ -1,3 +1,14 @@
 <p>
   layout works!
 </p>
+<app-nav-menu></app-nav-menu>
+
+<app-main-page></app-main-page>
+<!-- <router-outlet></router-outlet> -->
+<!-- Nav-menu -->
+<!-- app-root -->
+  <!-- ''/home -> main-page -->
+  <!-- /login login-page -->
+  <!-- /Reg Reg-page -->
+  <!-- /Admin Dashboard Admin Dashboard -->
+      <!-- approve -->
