--- a/WebApp/opted-adv-search/src/app/app.component.html
+++ b/WebApp/opted-adv-search/src/app/app.component.html
@@ -1,7 +1,3 @@
-<ag-grid-angular 
-    style="width: 700px; height: 500px;" 
-    class="ag-theme-balham"
-    [rowData]="rowData" 
-    [columnDefs]="columnDefs"
-    [modules]="modules">
-</ag-grid-angular>
+<!-- <app-spinner></app-spinner> -->
+
+<router-outlet></router-outlet>
