--- a/WebApp/opted-adv-search/src/app/z_components/layout/main-page/search-bar/search-bar.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/main-page/search-bar/search-bar.component.html
@@ -1,3 +1,6 @@
-<p>
-  search-bar works!
-</p>
+<div class="container-fluid mx-0 search-bar">
+<form action="" class="search">
+<input type="text" placeholder="Search here..." name="a">
+<button type="submit" class="rounded-pill text-white">Search</button>
+</form>
+</div>
