--- a/WebApp/opted-adv-search/src/app/z_components/layout/layout.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/layout.component.html
@@ -1,9 +1,10 @@
-<p>
+<!-- <p>
   layout works!
-</p>
+</p> -->
 <app-nav-menu></app-nav-menu>
-
-<app-main-page></app-main-page>
+<app-search-bar></app-search-bar>
+<!-- 
+<app-main-page></app-main-page> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- Nav-menu -->
 <!-- app-root -->
