--- a/WebApp/opted-adv-search/src/app/z_components/layout/nav-menu/nav-menu.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/nav-menu/nav-menu.component.html
@@ -1,3 +1,27 @@
-<p>
-  nav-menu works!
-</p>
+<html>
+  <body>
+    <header class="bg-nav">
+      <div class="container-fluid py-md-2 mx-0 ">
+        <nav class="navbar navbar-expand-md navbar-light d-flex flex-wrap justify-content-end">
+       
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="col-md-6 col-12 d-md-inline-flex ">
+                <p class="mb-md-0 mb-sm-2 home "> <a class="text-decoration-none text-dark" href="#"><i class="fa fa-fw fa-home"></i> Home</a> </p>
+                <p class="mb-md-0 mb-sm-2"> <a class="text-decoration-none text-dark" href="#"><i class="fa fa-dashboard"></i> Dashboard</a> </p>
+              </div>
+              <div class="col-md-6 col-12 d-flex flex-wrap justify-content-md-end ">
+                <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-login text-wrap rounded-pill"><i class="fa fa-fw fa-user"></i> Login</button>
+                <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-signup text-wrap rounded-pill"><i class="fa fa-fw fa-user"></i> Register</button>
+              </div>
+            <!-- <div class="d-flex flex-wrap ">
+              <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-logout text-wrap rounded-pill"><i class="fa fa-fw fa-user"></i> Logout</button>
+            </div> -->
+          </div>
+        </nav>
+      </div>
+    </header>
+  </body>
+</html>
