--- a/WebApp/opted-adv-search/src/styles.scss
+++ b/WebApp/opted-adv-search/src/styles.scss
@@ -2,4 +2,5 @@
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-balham.css";
 @import "./app/utilities/SCSS/common-theme.scss";
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
