--- a/WebApp/opted-adv-search/src/app/z_components/layout/main-page/search-result/search-result.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/main-page/search-result/search-result.component.html
@@ -1,7 +1,10 @@
-<ag-grid-angular 
-    style="width: 700px; height: 500px;" 
-    class="ag-theme-balham"
-    [rowData]="rowData" 
-    [columnDefs]="columnDefs"
-    [modules]="modules">
-</ag-grid-angular>
+<div class="container">
+    <ag-grid-angular 
+        style="width: 100%; height: 300px;" 
+        class="ag-theme-balham"
+        [rowData]="rowData" 
+        [columnDefs]="columnDefs">
+    </ag-grid-angular>
+</div>
+    <!-- [modules]="modules">
+</ag-grid-angular> -->
