--- a/WebApp/opted-adv-search/src/app/z_components/common/register-page/register-page.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/common/register-page/register-page.component.html
@@ -30,7 +30,7 @@
           <input type="password" class="form-control" placeholder="Confirm Password">      
         </div>
         <button type ="submit" class="btn btn-success submit-btn">Register</button>
-        <p class="new_user"><a href="#">Already register? Login</a></p>
+        <p class="new_user"><a href="#" routerLink="/login">Already register? Login</a></p>
       </form>
   </div>
   
