--- a/WebApp/opted-adv-search/src/app/z_components/layout/nav-menu/nav-menu.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/nav-menu/nav-menu.component.html
@@ -13,8 +13,8 @@
                 <p class="mb-md-0 mb-sm-2"> <a class="text-decoration-none text-dark" href="#"><i class="fa fa-dashboard"></i> Dashboard</a> </p>
               </div>
               <div class="col-md-6 col-12 d-flex flex-wrap justify-content-md-end ">
-                <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-login text-wrap rounded-pill"><i class="fa fa-fw fa-user"></i> Login</button>
-                <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-signup text-wrap rounded-pill"><i class="fa fa-fw fa-user"></i> Register</button>
+                <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-login text-wrap rounded-pill" routerLink="/login"><i class="fa fa-fw fa-user"></i> Login</button>
+                <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-signup text-wrap rounded-pill" routerLink="/registration"><i class="fa fa-fw fa-user"></i> Register</button>
               </div>
             <!-- <div class="d-flex flex-wrap ">
               <button type="button" class="btn bg-btn text-white px-lg-2 px-col-0 btn-logout text-wrap rounded-pill"><i class="fa fa-fw fa-user"></i> Logout</button>
