--- a/WebApp/opted-adv-search/src/app/z_components/layout/main-page/search-result/search-result.component.html
+++ b/WebApp/opted-adv-search/src/app/z_components/layout/main-page/search-result/search-result.component.html
@@ -1,10 +1,48 @@
-<div class="container">
+<!-- <div class="container">
     <ag-grid-angular 
         style="width: 100%; height: 300px;" 
         class="ag-theme-balham"
         [rowData]="rowData" 
         [columnDefs]="columnDefs">
     </ag-grid-angular>
+</div> -->
+<div class="search-result-container" *ngIf="this.resultData.length > 0">
+    <nav class="search-result-pagination" aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          <li class="page-item" *ngIf="pagination.showFirstIcon" (click)="changePage(1)">
+            <span class="page-link">First</span>
+          </li>
+          <li class="page-item" *ngFor="let num of pagination.paginationArray" (click)="changePage(num)">
+            <span class="page-link" [ngClass]="{'active': this.pagination.currentPageNo === num}">{{num}}</span>
+            </li>
+          <li class="page-item" *ngIf="pagination.showLastIcon" (click)="changePage(pagination.totalPages)" >
+            <span class="page-link">Last</span>
+          </li>
+        </ul>
+    </nav>
+    
+    <div class="search-result-content" >
+        <div class="search-result-item" *ngFor="let data of resultData">
+            <a href="">{{data['source.link']}}</a>
+            <div><span><b>Countries</b> - {{data['country.name']}}. <b>Source</b> - {{data['source.name']}}. </span></div>
+            <div><span><b>Start Year</b> - {{data['start.year']}}. <b>End Year Year</b> - {{data['end.year']}}. </span></div>
+            <a href=""><small>more details</small></a>
+        </div>
+    </div>
+
+    <nav class="search-result-pagination" aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          <li class="page-item" *ngIf="pagination.showFirstIcon" (click)="changePage(1)">
+            <span class="page-link">First</span>
+          </li>
+          <li class="page-item" *ngFor="let num of pagination.paginationArray" (click)="changePage(num)">
+            <span class="page-link" [ngClass]="{'active': this.pagination.currentPageNo === num}">{{num}}</span>
+            </li>
+          <li class="page-item" *ngIf="pagination.showLastIcon" (click)="changePage(pagination.totalPages)" >
+            <span class="page-link">Last</span>
+          </li>
+        </ul>
+    </nav>
 </div>
     <!-- [modules]="modules">
 </ag-grid-angular> -->
