--- a/WebApp/opted-adv-search/src/styles.scss
+++ b/WebApp/opted-adv-search/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./app/utilities/SCSS/reset-theme.scss";
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-balham.css";
 @import "./app/utilities/SCSS/common-theme.scss";
