--- a/WebApp/opted-adv-search/src/app/app.component.html
+++ b/WebApp/opted-adv-search/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <app-spinner></app-spinner> -->
-
 <app-nav-menu></app-nav-menu>
-<router-outlet></router-outlet>
+
+<div class="mt-4">
+    <router-outlet></router-outlet>
+</div>
